--- a/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_admin_home.xml
+++ b/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_admin_home.xml
@@ -10,21 +10,197 @@
         android:id="@+id/toolbar_top"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/cream"
         android:minHeight="?android:attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/nunito_bold"
-            android:text="Admin Home"
-            android:textColor="@color/darkBrown"
-            android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_top">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text="Admin Home"
+                    android:textColor="@color/darkBrown"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@+id/toolbar_top"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/toolbar_top" />
+
+                <TextView
+                    android:id="@+id/tokenPref"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text=""
+                    android:hint="API Authentication token"
+                    android:textColor="@color/darkBrown"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title" />
+
+                <TextView
+                    android:id="@+id/idPref"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/nunito_bold"
+                    android:hint="Logged User details"
+                    android:text=""
+                    android:textColor="@color/darkBrown"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tokenPref" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:id="@+id/tablesLinearLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idPref">
+
+                <LinearLayout
+                    android:id="@+id/tablesLinearLayout1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/sponsorsTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Sponsors" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/adminsTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Admins" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/childsTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Childs" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/orphanagesTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Orphanages" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/locationTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Locations" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tablesLinearLayout2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/adoptRequestsTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Adopt Requests" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/adoptStatusTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Adopt Status" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/rolesTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Roles" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/donationsTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Donations" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/orphanageActivitiesTableButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Orphanage Activities" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tablesLinearLayout">
+
+                <WebView
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/donationDetailsWebView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/cell_shape"/>
+
+                <WebView xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/adoptRequestDetailsWebView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/cell_shape"/>
+
+                <WebView xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/monthwiseDonationDetailsWebView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/cell_shape"/>
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
