--- a/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/res/values/themes.xml
+++ b/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.Orphanslife" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/goldie</item>
-        <item name="colorPrimaryVariant">@color/darkBrown</item>
+        <item name="colorPrimary">@color/textBlack</item>
+        <item name="colorPrimaryVariant">@color/md_black_1000</item>
         <item name="colorOnPrimary">@color/md_white_1000</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/goldie</item>
-        <item name="colorSecondaryVariant">@color/goldie</item>
-        <item name="colorOnSecondary">@color/goldie</item>
+        <item name="colorSecondary">@color/md_white_1000</item>
+        <item name="colorSecondaryVariant">@color/md_white_1000</item>
+        <item name="colorOnSecondary">@color/md_white_1000</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
