--- a/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/res/menu/toolbar_menu.xml
+++ b/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/res/menu/toolbar_menu.xml
@@ -4,11 +4,9 @@
 
     <item
         android:id="@+id/Home"
-        android:contentDescription="Logout"
         android:icon="@drawable/home"
         android:menuCategory="system"
         android:title="Home"
-        android:titleCondensed="@string/app_name"
         app:showAsAction="always" />
 
     <item
@@ -28,29 +26,23 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/login"
-        android:contentDescription="Logout"
-        android:icon="@drawable/login"
-        android:title="Login"
-        app:showAsAction="always" />
+        android:id="@+id/add"
+        android:title="Add"
+        android:icon="@drawable/add"
+        app:showAsAction="always"/>
+
+
+    <item
+        android:id="@+id/settings"
+        android:title="Settings"
+        android:icon="@drawable/settings"
+        app:showAsAction="collapseActionView"/>
 
     <item
         android:id="@+id/Logout"
         android:contentDescription="Logout"
         android:icon="@drawable/logout"
         android:title="Logout"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/add"
-        android:title="Add"
-        android:icon="@drawable/add"
-        app:showAsAction="always"/>
-
-    <item
-        android:id="@+id/settings"
-        android:title="Add"
-        android:icon="@drawable/settings"
-        app:showAsAction="always"/>
+        app:showAsAction="collapseActionView" />
 
 </menu>
