Login Screen UI modified

--- a/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/res/menu/toolbar_menu.xml
+++ b/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/res/menu/toolbar_menu.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/donate"
         android:contentDescription="Donate"
-        android:icon="@drawable/donate"
+        android:icon="@drawable/donation"
         android:title="Donate"
         android:titleCondensed="Donate"
         android:visible="true"
